feat(waf)：增加请求日志统计 (#4048)

--- a/plugins/openresty/waf/conf/waf.conf
+++ b/plugins/openresty/waf/conf/waf.conf
@@ -9,3 +9,4 @@ lua_package_path "/usr/local/openresty/1pwaf/?.lua;/usr/local/openresty/1pwaf/li
 init_by_lua_file  /usr/local/openresty/1pwaf/init.lua;
 access_by_lua_file /usr/local/openresty/1pwaf/waf.lua;
 log_by_lua_file /usr/local/openresty/1pwaf/log_and_traffic.lua;
+init_worker_by_lua_file /usr/local/openresty/1pwaf/worker.lua;
