--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: 问题与讨论 / Questions & Discussions
+    url: https://github.com/1Panel-dev/1Panel/discussions
+    about: 提出针对本项目安装部署、使用及其他方面的相关问题 / Raise questions about the installation, deployment, use and other aspects of the project.
   - name: 对 1Panel 项目有其他问题
     url: https://1panel.cn
     about: 如果想要进一步了解 1Panel 项目，欢迎发送邮件到 support@fit2cloud.com 进行提问。
