feat(waf): 增加 IP 组功能 (#4277)

--- a/plugins/openresty/waf/conf/waf.conf
+++ b/plugins/openresty/waf/conf/waf.conf
@@ -1,9 +1,10 @@
 lua_shared_dict dict_locks 100k;
-lua_shared_dict dict_req_count 10m;
+lua_shared_dict waf_req_count 10m;
 lua_shared_dict waf 30m;
-lua_shared_dict waf_black_ip 10m;
+lua_shared_dict waf_block_ip 10m;
+lua_shared_dict waf_ip_arr 10m;
 lua_shared_dict waf_limit 10m;
-lua_shared_dict waf_accesstoken 10m;
+lua_shared_dict ipc_shared_dict 10m;
 
 lua_package_path "/usr/local/openresty/1pwaf/?.lua;/usr/local/openresty/1pwaf/lib/?.lua;;";
 init_by_lua_file  /usr/local/openresty/1pwaf/init.lua;
