feat: 增加构建标签

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,6 +13,7 @@ builds:
   - main: ./cmd/server/main.go
     binary: 1panel
     flags:
+      - -tags=xpack
       - -trimpath
     ldflags:
       - -w -s
