feat: 网站默认配置增加支持 CDN 真实 IP (#4874)

--- a/cmd/server/nginx_conf/website_default.conf
+++ b/cmd/server/nginx_conf/website_default.conf
@@ -13,7 +13,7 @@ server {
     proxy_set_header Connection "upgrade";
 
 
-    access_log /www/sites/domain/log/access.log;
+    access_log /www/sites/domain/log/access.log main;
     error_log /www/sites/domain/log/error.log;
 
     location ^~ /.well-known/acme-challenge {
