--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,51 +20,41 @@
         "prettier": "prettier --write ."
     },
     "dependencies": {
-        "@codemirror/lang-javascript": "^6.1.0",
-        "@codemirror/language": "^6.3.2",
-        "@codemirror/legacy-modes": "^6.3.1",
-        "@codemirror/theme-one-dark": "^6.1.0",
+        "@codemirror/lang-javascript": "^6.2.2",
+        "@codemirror/language": "^6.10.2",
+        "@codemirror/legacy-modes": "^6.4.0",
+        "@codemirror/theme-one-dark": "^6.1.2",
         "@element-plus/icons-vue": "^1.1.4",
-        "@vueuse/core": "^8.0.1",
-        "axios": "^1.6.0",
-        "echarts": "^5.3.0",
-        "echarts-liquidfill": "^3.1.0",
-        "element-plus": "^2.3.4",
+        "@vueuse/core": "^8.9.4",
+        "@xterm/addon-fit": "^0.10.0",
+        "@xterm/xterm": "^5.5.0",
+        "axios": "^1.7.2",
+        "echarts": "^5.5.0",
+        "element-plus": "^2.7.5",
         "fit2cloud-ui-plus": "^1.1.4",
-        "js-base64": "^3.7.2",
-        "js-md5": "^0.7.3",
-        "md-editor-v3": "^2.7.2",
-        "monaco-editor": "^0.34.0",
+        "js-base64": "^3.7.7",
+        "md-editor-v3": "^2.11.3",
+        "monaco-editor": "^0.34.1",
         "nprogress": "^0.2.0",
-        "optionator": "^0.9.3",
-        "pinia": "^2.0.12",
+        "pinia": "^2.1.7",
         "pinia-plugin-persistedstate": "^1.6.1",
-        "qs": "^6.10.3",
-        "sass-loader": "^13.0.2",
+        "qs": "^6.12.1",
         "screenfull": "^6.0.2",
         "unplugin-vue-define-options": "^0.7.3",
-        "vue": "^3.2.25",
+        "vue": "^3.4.27",
         "vue-clipboard3": "^2.0.0",
         "vue-codemirror": "^6.1.1",
-        "vue-i18n": "^9.10.2",
-        "vue-router": "^4.0.12",
-        "vue3-seamless-scroll": "^1.2.0",
-        "xterm": "^4.19.0",
-        "xterm-addon-attach": "^0.6.0",
-        "xterm-addon-fit": "^0.5.0"
+        "vue-i18n": "^9.13.1",
+        "vue-router": "^4.3.3"
     },
     "devDependencies": {
-        "@commitlint/cli": "^17.0.1",
-        "@commitlint/config-conventional": "^17.0.0",
-        "@types/node": "^17.0.31",
+        "@types/node": "^20.14.2",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
-        "@vitejs/plugin-vue": "^2.2.0",
-        "@vitejs/plugin-vue-jsx": "^1.3.10",
+        "@vitejs/plugin-vue": "^5.0.5",
+        "@vitejs/plugin-vue-jsx": "^4.0.0",
         "autoprefixer": "^10.4.7",
         "commitizen": "^4.2.4",
-        "cz-git": "^1.3.2",
-        "driver.js": "^0.9.8",
         "eslint": "^8.43.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
@@ -81,11 +71,10 @@
         "typescript": "^4.5.4",
         "unplugin-auto-import": "^0.16.4",
         "unplugin-vue-components": "^0.25.0",
-        "vite": "^2.9.17",
-        "vite-plugin-cdn-import": "^0.3.5",
+        "vite": "^5.2.13",
         "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-eslint": "^1.6.0",
-        "vite-plugin-html": "^3.2.0",
+        "vite-plugin-eslint": "^1.8.1",
+        "vite-plugin-html": "^3.2.2",
         "vite-plugin-vue-setup-extend": "^0.4.0",
         "vite-svg-loader": "^5.1.0",
         "vue-tsc": "^0.29.8"
