--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
         "prettier": "prettier --write ."
     },
     "dependencies": {
+        "@codemirror/lang-html": "^6.4.9",
         "@codemirror/lang-javascript": "^6.2.2",
+        "@codemirror/lang-php": "^6.0.1",
         "@codemirror/language": "^6.10.2",
         "@codemirror/legacy-modes": "^6.4.0",
         "@codemirror/theme-one-dark": "^6.1.2",
@@ -30,6 +32,7 @@
         "@xterm/addon-fit": "^0.10.0",
         "@xterm/xterm": "^5.5.0",
         "axios": "^1.7.2",
+        "codemirror": "^6.0.1",
         "echarts": "^5.5.0",
         "element-plus": "^2.7.5",
         "fit2cloud-ui-plus": "^1.1.4",
