--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,9 @@
         "@codemirror/theme-one-dark": "^6.1.2",
         "@element-plus/icons-vue": "^1.1.4",
         "@highlightjs/vue-plugin": "^2.1.0",
+        "@vue-office/docx": "^1.6.2",
+        "@vue-office/excel": "^1.7.8",
+        "@vue-office/pdf": "^2.0.2",
         "@vueuse/core": "^8.9.4",
         "@xterm/addon-fit": "^0.10.0",
         "@xterm/xterm": "^5.5.0",
@@ -49,6 +52,7 @@
         "vue": "^3.4.27",
         "vue-clipboard3": "^2.0.0",
         "vue-codemirror": "^6.1.1",
+        "vue-demi": "^0.14.6",
         "vue-i18n": "^9.13.1",
         "vue-router": "^4.3.3"
     },
