--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ build/1panel
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+*_xpack.go
+
 # Dependency directories
 /pkg/
 backend/__debug_bin
