--- a/frontend/.env
+++ b/frontend/.env
@@ -4,16 +4,16 @@ VITE_GLOB_APP_TITLE = '1Panel'
 # port
 VITE_PORT = 4004
 
-# open 运行 npm run dev 时自动打开浏览器
+# open run npm run dev Automatically open the browser
 VITE_OPEN = false
 
-# 是否生成包预览文件
+# Whether to generate a package preview file
 VITE_REPORT = false
 
-# 是否开启gzip压缩
+# Whether to turn on GZIP compression
 VITE_BUILD_GZIP = false
 
-# 是否删除生产环境 console
+# Whether to delete the production environment console
 VITE_DROP_CONSOLE = true
 
 
