--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
         "lint:lint-staged": "lint-staged",
         "release": "standard-version",
         "commit": "git pull && git add -A && git-cz && git push",
-        "prettier:comment": "自动格式化当前目录下的所有文件",
+        "prettier:comment": "Automatic formatting all files in the current directory",
         "prettier": "prettier --write ."
     },
     "dependencies": {
