--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,16 +2,15 @@
 # Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
-    # - export NODE_OPTIONS="--max-old-space-size=8192"
+    - export NODE_OPTIONS="--max-old-space-size=8192"
     # - make build_web
     - chmod +x ./script.sh
     - ./script.sh
     - sed -i 's@ORIGINAL_VERSION=.*@ORIGINAL_VERSION=v{{ .Version }}@g' 1pctl
     - go mod tidy
-
 builds:
   - main: ./cmd/server/main.go
-    binary: 1panel
+    binary: nextweb
     flags:
       - -tags=xpack
       - -trimpath
@@ -32,11 +31,11 @@ builds:
 
 archives:
   - format: tar.gz
-    name_template: "1panel-v{{ .Version }}-{{ .Os }}-{{ .Arch }}{{- if .Arm }}v{{ .Arm }}{{ end }}"
+    name_template: "nextweb-v{{ .Version }}-{{ .Os }}-{{ .Arch }}{{- if .Arm }}v{{ .Arm }}{{ end }}"
     wrap_in_directory: true
     files:
       - 1pctl
-      - 1panel.service
+      - nextweb.service
       - install.sh
       - README.md
       - LICENSE
@@ -52,6 +51,11 @@ release:
     - glob: dist/*.tar.gz
     - glob: dist/checksums.txt
   name_template: "Release {{.Tag}}"
+gitea_urls:
+  api: https://git.nextzenos.com/api/v1
+  download: https://git.nextzenos.com
+  # set to true if you use a self-signed certificate
+  skip_tls_verify: false
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
