update: update Makefile

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       - /root:/root
     environment:
       - TZ=Asia/Ho_Chi_Minh
-    image: nextweb:latest
+    image: kaysar12/nextweb:1.1
     labels:
       createdBy: "Apps"
-
