--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
     "name": "1Panel-Frontend",
     "private": true,
     "version": "1.10",
-    "description": "1Panel 前端",
+    "description": "1panel Frontend",
     "scripts": {
         "dev": "vite",
         "serve": "vite",
