--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,8 +31,7 @@
         },
         // 跳过库检查，解决打包失败
         "skipLibCheck": true,
-        "ignoreDeprecations": "5.0",
-        "suppressImplicitAnyIndexErrors": true
+        "ignoreDeprecations": "5.0"
     },
     // "include": ["./src/views"],
     "exclude": ["node_modules", "dist", "**/*.js", "*.json", "*.md"]
