chore : update makefile and refactor code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "ansible.python.interpreterPath": "/opt/homebrew/bin/python3",
     "makefile.configureOnOpen": true,
     "cSpell.words": [
-        "gitea"
+        "gitea",
+        "nextweb"
     ]
 }
