--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 10086:10086
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
+      - /var/lib/docker/volumes:/var/lib/docker/volumes:rslave
       - /opt:/opt
       - /root:/root
     environment:
